<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
	<LinearLayout
		style="@style/inputRowLayout" >
	
		<TextView
			style="@style/textLabel.inputLabel"
			android:text="@string/name_label" />
			
		<EditText
			style="@style/inputItem"
			android:id="@+id/nameInput"/>
		
	</LinearLayout>
	
	<LinearLayout
		style="@style/inputRowLayout" >

		<TextView
			style="@style/textLabel.inputLabel"
			android:text="@string/sex_label" />

		<RadioGroup
			style="@style/inputItem"
			android:id="@+id/sexChoiceGroup"
			android:orientation="vertical">
			<RadioButton 
				android:id="@+id/sexChoiceMale"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/male"
				android:checked="true" />
			<RadioButton 
				android:id="@+id/sexChoiceFemale"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/female" />
		</RadioGroup>

	</LinearLayout>
	
	<LinearLayout
		style="@style/inputRowLayout" >

		<TextView
			style="@style/textLabel.inputLabel"
			android:text="@string/characteristics_label" />

		<EditText
			style="@style/inputItem"
			android:id="@+id/characteristicsInput"/>

	</LinearLayout>
	
	<LinearLayout
		style="@style/inputRowLayout" >

		<TextView
			style="@style/textLabel.inputLabel"
			android:text="@string/height_label" />

		<EditText
			style="@style/inputItem"
			android:id="@+id/heightInput"/>

	</LinearLayout>
	
	<LinearLayout
		style="@style/inputRowLayout" >

		<TextView
			style="@style/textLabel.inputLabel"
			android:text="@string/weight_label" />

		<EditText
			style="@style/inputItem"
			android:id="@+id/weightInput"/>

	</LinearLayout>
	
	<LinearLayout
		style="@style/inputRowLayout" >

		<TextView
			style="@style/textLabel.inputLabel"
			android:text="@string/faith_label" />

		<EditText
			style="@style/inputItem"
			android:id="@+id/faithInput"/>

	</LinearLayout>
	
	<LinearLayout
		style="@style/inputRowLayout" >

		<TextView
			style="@style/textLabel.inputLabel"
			android:text="@string/owner_label" />

		<EditText
			style="@style/inputItem"
			android:id="@+id/owningPlayerInput"/>

	</LinearLayout>
	
	<LinearLayout
		style="@style/inputRowLayout"
		android:paddingLeft="30dp">
		<Button
			android:id="@+id/fluffDoneButton"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:text="@string/done" />
	</LinearLayout>
	
</LinearLayout>
</ScrollView>
